# GyroSensorPCMonitorApp

./: README.md
ArduinoFirmware/: ArduinoFirmware.ino
PCMonitorApp/: CMakeLists.txt  DataGraphMonitor.qml  SerialPortWrapper.cpp  SerialPortWrapper.h  main.cpp  main.qml
